--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	
@@ -26,7 +27,7 @@
 	<script src="models/answer.js"></script>
 
 	<script>EmberHandlebarsLoader.loadTemplates(['questions', 'application', 'question', 'new-question', 'answer']);</script>
-	<title>Q AND A</title>
+	<title>Q & A</title>
 </head>
 <body>
 
